[gender-page] Make detail popup fit to screen on smaller devices. Fixes #191

--- a/src/styles/gender-split.styl
+++ b/src/styles/gender-split.styl
@@ -114,7 +114,6 @@
       font-family: $trope-font;
       display: inline-block;
       width: 100%;
-      font-size: 12px;
 
       ul {
         display: inline-block;
@@ -122,15 +121,18 @@
         list-style-type: none;
         padding-left: 10px;
 
+        width: 40%
+
         li {
           margin-bottom:10px;
         }
+
 
         a {
           padding:2px 6px 3px 6px;
           text-decoration: none;
           color: $dark-grey;
-          // color: white;
+          font-size: 12px;
         }
 
         a:hover {
